BQ and dbt setup

--- a/appointments_stats.ipynb
+++ b/appointments_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,6 +257,317 @@
    ],
    "source": [
     "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/antihaddock/Repos/ref_analysis/data/Appointments/2015.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2016 - 2018.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2012.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2010-2011.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2009.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2013-2014.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2021.csv', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2020.csv', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2022.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Appointments/2019.csv', '/home/antihaddock/Repos/ref_analysis/data/Disciplinary/2022 Yellow Card Register MASTER.xlsx', '/home/antihaddock/Repos/ref_analysis/data/Disciplinary/2022 Suspension Register MASTER.xlsx']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def get_files(path):\n",
+    "    files = []\n",
+    "    for r, d, f in os.walk(path):\n",
+    "        for file in f:\n",
+    "            files.append(os.path.join(r, file))\n",
+    "    return files\n",
+    "\n",
+    "path = '/home/antihaddock/Repos/ref_analysis/data/'\n",
+    "files = get_files(path)\n",
+    "print(all_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2015.xlsx\n",
+      "Name           object\n",
+      "Date           object\n",
+      "Description    object\n",
+      "Position       object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2016 - 2018.xlsx\n",
+      "name                  object\n",
+      "position              object\n",
+      "matchdate     datetime64[ns]\n",
+      "matchgrade            object\n",
+      "kickoff               object\n",
+      "ground                object\n",
+      "hometeam              object\n",
+      "awayteam              object\n",
+      "Year                   int64\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2012.xlsx\n",
+      "Name           object\n",
+      "Date           object\n",
+      "Description    object\n",
+      "Position       object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2010-2011.xlsx\n",
+      "name           object\n",
+      "Date           object\n",
+      "Description    object\n",
+      "Position       object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2009.xlsx\n",
+      "Name           object\n",
+      "Date           object\n",
+      "Description    object\n",
+      "Position       object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2013-2014.xlsx\n",
+      "Name                   object\n",
+      "Date           datetime64[ns]\n",
+      "Description            object\n",
+      "Position               object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2021.csv\n",
+      "name          object\n",
+      "position      object\n",
+      "matchgrade    object\n",
+      "matchdate     object\n",
+      "kickoff       object\n",
+      "ground        object\n",
+      "hometeam      object\n",
+      "awayteam      object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2020.csv\n",
+      "association     object\n",
+      "matchno        float64\n",
+      "histyear       float64\n",
+      "referee        float64\n",
+      "name            object\n",
+      "postype        float64\n",
+      "position        object\n",
+      "matchdate       object\n",
+      "matchgrade      object\n",
+      "kickoff         object\n",
+      "ground          object\n",
+      "hometeam        object\n",
+      "awayteam        object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2022.xlsx\n",
+      "association            object\n",
+      "matchno               float64\n",
+      "histyear              float64\n",
+      "referee               float64\n",
+      "name                   object\n",
+      "postype               float64\n",
+      "position               object\n",
+      "matchdate      datetime64[ns]\n",
+      "matchgrade             object\n",
+      "kickoff                object\n",
+      "ground                 object\n",
+      "hometeam               object\n",
+      "awayteam               object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Appointments/2019.csv\n",
+      "dassociation    object\n",
+      "matchno          int64\n",
+      "histyear         int64\n",
+      "referee          int64\n",
+      "name            object\n",
+      "postype          int64\n",
+      "position        object\n",
+      "matchdate       object\n",
+      "matchgrade      object\n",
+      "kickoff         object\n",
+      "ground          object\n",
+      "hometeam        object\n",
+      "awayteam        object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Disciplinary/2022 Yellow Card Register MASTER.xlsx\n",
+      "ROUND                           object\n",
+      "COMPETITION                     object\n",
+      "GRADE                           object\n",
+      "DATE                    datetime64[ns]\n",
+      "VENUE                           object\n",
+      "FIRST NAME                      object\n",
+      "SURNAME                         object\n",
+      "CLUB                            object\n",
+      "INFRINGEMENT                    object\n",
+      "PLAYER/TEAM OFFICIAL            object\n",
+      "COUNT                            int64\n",
+      "NOTES                           object\n",
+      "dtype: object\n",
+      "/home/antihaddock/Repos/ref_analysis/data/Disciplinary/2022 Suspension Register MASTER.xlsx\n",
+      "DATE OF NOTICE                      datetime64[ns]\n",
+      "ROUND                                       object\n",
+      "MATCH DAY                                   object\n",
+      "GRADE                                       object\n",
+      "DATE of INFRINGEMENT                datetime64[ns]\n",
+      "VENUE                                       object\n",
+      "OPPOSITION CLUB                             object\n",
+      "FIRST NAME                                  object\n",
+      "SURNAME                                     object\n",
+      "FFA Number                                   int64\n",
+      "CLUB                                        object\n",
+      "CLUB EMAIL                                  object\n",
+      "CODE                                        object\n",
+      "OFFENCE                                     object\n",
+      "GRADING                                     object\n",
+      "After Send off Code                         object\n",
+      "After Send off Offence                      object\n",
+      "After Send off GRADING                      object\n",
+      "SUSPENSION MATCHES                          object\n",
+      "AUTO PLUS + (ADDITIONAL MATCHES)           float64\n",
+      "NOTES                                       object\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/antihaddock/anaconda3/lib/python3.9/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  for idx, row in parser.parse():\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in files:\n",
+    "        # take the path of the file and return just its name without spaces to come up \n",
+    "        # with the Big Query Table name\n",
+    "        bq_table_name = os.path.splitext(os.path.basename(file))[0].replace(\" \", \"\")   \n",
+    "        if file.endswith('.csv'):\n",
+    "            df = pd.read_csv(file, low_memory=False)\n",
+    "        elif file.endswith('.xlsx'):\n",
+    "            df = pd.read_excel(file)\n",
+    "        else:\n",
+    "            print(f\"{file} is not a CSV or XLSX file.\")\n",
+    "            \n",
+    "        #Check for column names BQ doesn't like\n",
+    "        if \"Item/Acct\" in df.columns:\n",
+    "        # replace the column with a new column named \"Position\"\n",
+    "            df[\"Position\"] = df[\"Item/Acct\"]\n",
+    "            df.drop(\"Item/Acct\", axis=1, inplace=True)\n",
+    "            \n",
+    "        # # Fix issue with date time columns throwing errors for BQ\n",
+    "        # object_cols = df.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "        # for column in object_cols:\n",
+    "        #     dtype = str(type(df[column].values[0]))\n",
+    "        #     if dtype == \"<class 'datetime.date'>\":\n",
+    "        #         df[column]  = pd.to_datetime(df[column] , infer_datetime_format=True)(\" \", \"\")\n",
+    "        #         print(\"I Changed a Column\")\n",
+    "            \n",
+    "        # for col in df.columns:\n",
+    "        #     #if df[col].dtype == 'datetime64[ns]':\n",
+    "        #     # convert the column to pandas datetime format\n",
+    "        #         #df[col] = pd.to_datetime(df[col])\n",
+    "        #         df[col] = df[col].dt.strftime('%Y-%m-%d')\n",
+    "        #         print('I changed a column')\n",
+    "                \n",
+    "        print(file)\n",
+    "        print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "association            object\n",
+       "matchno               float64\n",
+       "histyear              float64\n",
+       "referee               float64\n",
+       "name                   object\n",
+       "postype               float64\n",
+       "position               object\n",
+       "matchdate      datetime64[ns]\n",
+       "matchgrade             object\n",
+       "kickoff                object\n",
+       "ground                 object\n",
+       "hometeam               object\n",
+       "awayteam               object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel('/home/antihaddock/Repos/ref_analysis/data/Appointments/2022.xlsx')\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([' A/A Fri D ', ' A/A C (Fri', ' 13 B', ' 14 A', ' 12 E', ' W13 B',\n",
+       "       ' W13 A', ' W12 C', ' O 35 Sat C', ' O 35 Sat A', ' WA/A G',\n",
+       "       ' WA/A F', ' W14 B', ' W15 A', ' 13 A', ' 14 C', ' AA Fri K',\n",
+       "       ' O/35 Fri A', ' WA/A B', ' WA/A  A', ' O/35 Fri D', ' 12 B',\n",
+       "       ' 12 A', ' 14 D', ' W12 A', ' Interdistrict 25 A', ' A/A B',\n",
+       "       ' O/35 Fri G', ' AAW Fri D', ' W15 B', ' WA/A D', ' O/35 Fri K',\n",
+       "       ' WA/A E', ' A/A F (Fri', nan, ' NPL 14', ' NPL 13', ' SAP 11',\n",
+       "       ' SAP 12', ' FNSWNPL14', ' FNSWNPL15', ' 12 Years G', ' NL1 16',\n",
+       "       ' NPL 15', ' U15 - NPL ', ' U13 - NPL ', ' NPL 16', ' NL1 13', 14,\n",
+       "       ' NL1 15', \" NPL Men's \", ' NL1 1st', ' 15 A', ' 16 C', ' W18 A',\n",
+       "       ' 13 D', ' 15 B', ' WA/A C', ' A/A B Int', ' 12 K', ' 13 E',\n",
+       "       ' 13 C', ' 14 E', ' 16 B', ' AAW Fri B', ' 15 E', ' 14 B', ' 12 J',\n",
+       "       ' 16 A', ' W12 B', ' 17 C', ' 12 C', ' W16 B', ' FNSWNPL16',\n",
+       "       ' U17 - NPL ', ' NL1 14', ' NL1 Youth ', ' NL1 18', ' NL1 Res',\n",
+       "       ' Reserve Gr', ' SAP 9', ' 10 Years B', ' AA Fri L', ' 12 F',\n",
+       "       ' A/A C', ' AA Fri N', ' AA Fri G', ' 15 D', ' A/A A (Fri',\n",
+       "       ' O/35 Fri E', ' O/35 Fri F', ' 17 A/B', ' A/A H', ' AAW Fri C',\n",
+       "       ' AA Fri J', ' 16 D', ' 13 F', ' W14 A', ' W16 A', ' AAW Fri A',\n",
+       "       ' 12 D', ' ZL1 Res', ' ZL1 1st', ' Australia ', ' ZL1 3rd',\n",
+       "       ' ZPL 3rd', ' ZPL Res', ' ZPL 1st', ' ZL2 Res', ' ZL2 1st',\n",
+       "       ' ZL3 Res', ' ZL3 1st', ' NPL 18', ' 15 C', ' A/A G',\n",
+       "       ' 18 A/B Int', ' FNSWNPL13', ' 10 Years G', ' 11 Years G',\n",
+       "       \" NPL Women'\", ' NPL Res', ' NPL 1st', ' FNSWNPL18', ' FNSWNPL20',\n",
+       "       ' FNSWNPL1st', ' A/A E', ' O/35 Fri H', ' 18 B', ' O/35 Fri J',\n",
+       "       ' O/35 Fri C', ' AA Fri M', ' AA Fri H', ' A/A J', ' A/A D',\n",
+       "       ' O/35 Fri B', ' 17 B', ' A/A A', ' A/A K', ' Summer O35',\n",
+       "       ' A/A F', ' 12 H', ' 12 G', ' A/A E (Fri', ' O 35 Sat B'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['matchgrade'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df['matchgrade'].astype(int)\n",
+    "df['matchgrade'] = df['matchgrade'].astype(bytes)#.encode('utf-8')\n",
+    "\n"
    ]
   }
  ],
