Adding all files

--- a/appointments_stats.ipynb
+++ b/appointments_stats.ipynb
@@ -514,49 +514,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2016-2018.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2013-2014.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2022.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2022SuspensionRegisterMASTER.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2020.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2022YellowCardRegisterMASTER.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2012.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2015.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2009.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2010-2011.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2021.parquet\n",
+      "file name is: /home/antihaddock/Repos/ref_analysis/data/parquets/2019.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_files(path):\n",
+    "    \"\"\" A function to find all files in a directory and save the path into a list\"\"\" \n",
+    "    files = []\n",
+    "    for r, d, f in os.walk(path):\n",
+    "        for file in f:\n",
+    "            files.append(os.path.join(r, file))\n",
+    "    return files\n",
+    "\n",
+    "files = get_files('/home/antihaddock/Repos/ref_analysis/data/parquets/')\n",
+    "for file in files:\n",
+    "        print(f'file name is: {file}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([' A/A Fri D ', ' A/A C (Fri', ' 13 B', ' 14 A', ' 12 E', ' W13 B',\n",
-       "       ' W13 A', ' W12 C', ' O 35 Sat C', ' O 35 Sat A', ' WA/A G',\n",
-       "       ' WA/A F', ' W14 B', ' W15 A', ' 13 A', ' 14 C', ' AA Fri K',\n",
-       "       ' O/35 Fri A', ' WA/A B', ' WA/A  A', ' O/35 Fri D', ' 12 B',\n",
-       "       ' 12 A', ' 14 D', ' W12 A', ' Interdistrict 25 A', ' A/A B',\n",
-       "       ' O/35 Fri G', ' AAW Fri D', ' W15 B', ' WA/A D', ' O/35 Fri K',\n",
-       "       ' WA/A E', ' A/A F (Fri', nan, ' NPL 14', ' NPL 13', ' SAP 11',\n",
-       "       ' SAP 12', ' FNSWNPL14', ' FNSWNPL15', ' 12 Years G', ' NL1 16',\n",
-       "       ' NPL 15', ' U15 - NPL ', ' U13 - NPL ', ' NPL 16', ' NL1 13', 14,\n",
-       "       ' NL1 15', \" NPL Men's \", ' NL1 1st', ' 15 A', ' 16 C', ' W18 A',\n",
-       "       ' 13 D', ' 15 B', ' WA/A C', ' A/A B Int', ' 12 K', ' 13 E',\n",
-       "       ' 13 C', ' 14 E', ' 16 B', ' AAW Fri B', ' 15 E', ' 14 B', ' 12 J',\n",
-       "       ' 16 A', ' W12 B', ' 17 C', ' 12 C', ' W16 B', ' FNSWNPL16',\n",
-       "       ' U17 - NPL ', ' NL1 14', ' NL1 Youth ', ' NL1 18', ' NL1 Res',\n",
-       "       ' Reserve Gr', ' SAP 9', ' 10 Years B', ' AA Fri L', ' 12 F',\n",
-       "       ' A/A C', ' AA Fri N', ' AA Fri G', ' 15 D', ' A/A A (Fri',\n",
-       "       ' O/35 Fri E', ' O/35 Fri F', ' 17 A/B', ' A/A H', ' AAW Fri C',\n",
-       "       ' AA Fri J', ' 16 D', ' 13 F', ' W14 A', ' W16 A', ' AAW Fri A',\n",
-       "       ' 12 D', ' ZL1 Res', ' ZL1 1st', ' Australia ', ' ZL1 3rd',\n",
-       "       ' ZPL 3rd', ' ZPL Res', ' ZPL 1st', ' ZL2 Res', ' ZL2 1st',\n",
-       "       ' ZL3 Res', ' ZL3 1st', ' NPL 18', ' 15 C', ' A/A G',\n",
-       "       ' 18 A/B Int', ' FNSWNPL13', ' 10 Years G', ' 11 Years G',\n",
-       "       \" NPL Women'\", ' NPL Res', ' NPL 1st', ' FNSWNPL18', ' FNSWNPL20',\n",
-       "       ' FNSWNPL1st', ' A/A E', ' O/35 Fri H', ' 18 B', ' O/35 Fri J',\n",
-       "       ' O/35 Fri C', ' AA Fri M', ' AA Fri H', ' A/A J', ' A/A D',\n",
-       "       ' O/35 Fri B', ' 17 B', ' A/A A', ' A/A K', ' Summer O35',\n",
-       "       ' A/A F', ' 12 H', ' 12 G', ' A/A E (Fri', ' O 35 Sat B'],\n",
-       "      dtype=object)"
+       "[]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['matchgrade'].unique()"
+    "files"
    ]
   },
   {
