--- a/appointments_stats.ipynb
+++ b/appointments_stats.ipynb
@@ -580,6 +580,43 @@
     "df['matchgrade'] = df['matchgrade'].astype(bytes)#.encode('utf-8')\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hashlib import sha1\n",
+    "\n",
+    "def compute_hash(email):\n",
+    "    return sha1(email.encode('utf-8')).hexdigest()\n",
+    "\n",
+    "def compute_certificate_id(email):\n",
+    "    email_clean = email.lower().strip()\n",
+    "    return compute_hash(email_clean + '_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://certificate.datatalks.club/dezoomcamp/2023/07e06416a4a0f3509ad00eaea1c2dd23bef8f309.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "cohort = 2023\n",
+    "course = 'dezoomcamp'\n",
+    "your_id = compute_certificate_id('antihaddock1@gmail.com')\n",
+    "url = f\"https://certificate.datatalks.club/{course}/{cohort}/{your_id}.pdf\"\n",
+    "print(url)"
+   ]
   }
  ],
  "metadata": {
@@ -598,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
